# win32-gui

./: .gitignore  CMakeLists.txt  app.manifest  main.cpp  resources.rc
src/: Application.cpp  Application.h  Panel.cpp  Panel.h  PushButton.cpp  PushButton.h  Widget.cpp  Widget.h
src/internal/: Environment.cpp  Environment.h
